# gacf

./: .gitignore  main.py  pyproject.toml
configs/: base.yaml  cifar10.yaml
data/letterpad.fig/: canvas.fig  meta.json
scripts/: infer.py
src/: config.py  gacf.py  metrics.py  model.py  train.py  trainer.py
src/datasets/: __init__.py  base.py  cifar10.py
src/pre/: __init__.py  transform.py
src/pre/datasets/: __init__.py  cifar10.py
